k8s/identity-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity
spec:
  paused: true
  template:
    metadata:
      labels:
        app: hl
        component: identity
    spec:
      containers:
      - name: identity
        image: liuhl/identity:v0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 100
          name: rpc-port
