k8s/identity-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: identity1
spec:
  containers:
  - name: identity
    image: liuhl/identity:v0.0.2
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
      name: http-port
    - containerPort: 100
      name: rpc-port
