k8s/identity-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hl
    component: identity
  name: identity
spec:
  type: LoadBalancer
  ports:
  - name: "http-port"
    port: 8080
    targetPort: 8080
    protocol: TCP  
  - name: "rpc-port"
    port: 100
    targetPort: 100
    protocol: TCP  
  selector:
    app: hl
    component: identity
